[package]
name = "swisher"
version = "0.1.0"
authors = ["Chris West (Faux) <git@goeswhere.com>"]
edition = "2018"

[dependencies]
base64 = "0.11"
chrono = { version = "0.4", features = ["serde"] }
data-encoding = "2"
failure = "0.1"
md-5 = "0.8"
serde = "1"
serde_derive = "1"
serde_json = "1"
sha2 = "0.8"
tempfile-fast = "0.3"
zstd = "0.5"

# bin dependencies
hyper = { version = "0.13", optional = true }
path-tree = { version = "0.1", optional = true }
tokio = { version = "0.2", features = ["full"], optional = true }

[[bin]]
name = "swisher"
required-features = ["hyper", "path-tree", "tokio"]
