[package]
name = "swisher"
version = "0.1.0"
authors = ["Chris West (Faux) <git@goeswhere.com>"]
edition = "2018"

[dependencies]
base64 = "0.11"
chrono = { version = "0.4", features = ["serde"] }
ctrlc = { version = "3", features = ["termination"] }
data-encoding = "2"
failure = "0.1"
futures = "0.3"
http-body = "0.3"
hyper = "0.13"
log = "0.4"
md-5 = "0.8"
pin-project = "0.4"
rand = "0.7"
serde = "1"
serde_derive = "1"
serde_json = "1"
sha2 = "0.8"
tempfile-fast = "0.3"
tokio = { version = "0.2", features = ["full"] }
zstd = "0.5"

# bin dependencies
path-tree = { version = "0.1", optional = true }
pretty_env_logger = { version = "0.3", optional = true }

[features]
default = []
bin = ["path-tree", "pretty_env_logger"]

[[bin]]
name = "swisher"
required-features = ["bin"]
